fix form spacing on mobile

--- a/src/css/pages/booking.css
+++ b/src/css/pages/booking.css
@@ -41,3 +41,17 @@
   justify-content: center;
   height: 65px;
 }
+
+@media screen and (max-width: 428px) {
+  .booking-form {
+    .row {
+      & > div:nth-child(1) {
+        margin-bottom: 1rem;
+      }
+    }
+  }
+
+  .mb-sm-3 {
+    margin-bottom: 1rem;
+  }
+}
